--- a/src/config.yml
+++ b/src/config.yml
@@ -1,5 +1,5 @@
-data_dir: ../data
-bert_dir: ../bert
+data_dir: data
+bert_dir: bert
 model_file_name: model.pkl
 sqlite_db_file_name: messages.db
 tf_idf_params:
