--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,9 @@ numpy==1.23.3
 scipy==1.9.1
 scikit-learn==1.1.2
 pandas==1.3
+transformers==4.25.1
+torch==1.13.1
+gitpython==3.1.29
 # ----- Micoservices ------
 Flask==2.2.2
 flask_restful==0.3.9
