Add SVC classifier and predict API

--- a/src/config.yml
+++ b/src/config.yml
@@ -1,5 +1,6 @@
 data_dir: /srv/data
 model_file_name: model.pkl
+vectorizer_file_name: vectorizer.pkl
 sqlite_db_file_name: messages.db
 tf_idf_params:
   max_df: 0.2
