--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 # ----- ML & data tools ------
-gensim==4.2.0
+gensim==3.8.3
 numpy==1.23.3
 scipy==1.9.1
 scikit-learn==1.1.2
 pandas==1.3
+texthero==1.1.0
 # ----- Micoservices ------
 Flask==2.2.2
 flask_restful==0.3.9
